[package]
name = "assay"
version = "0.1.1"
edition = "2024"
authors = ["Michael Gattozzi <self@mgattozzi.dev>"]
description = "A super powered testing macro for Rust"
documentation = "https://docs.rs/assay"
readme = "README.md"
repository = "https://github.com/mgattozzi/assay"
license = "MPL-2.0"
keywords = ["proc-macro", "test", "testing"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
assay-proc-macro = { path = "assay-proc-macro", version = "0.1.0", default-features = false }
async-std = { version = "1", optional = true }
eyre = "0.6"
pretty_assertions_sorted = "1"
tempfile = "3.14.0"
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[workspace]
members = ["assay-proc-macro"]

[features]
default = ["async-tokio-runtime"]
async-tokio-runtime = ["tokio", "assay-proc-macro/async"]
async-std-runtime = ["async-std", "assay-proc-macro/async"]
