[package]
name = "assay"
version = "0.2.0-nightly"
edition = "2024"
authors = ["Michael Gattozzi <self@mgattozzi.dev>"]
description = "A super powered testing macro for Rust"
documentation = "https://docs.rs/assay"
readme = "README.md"
repository = "https://github.com/mgattozzi/assay"
license = "MPL-2.0"
keywords = ["proc-macro", "test", "testing"]
categories = ["development-tools", "development-tools::testing"]

[dependencies]
assay-proc-macro = { path = "assay-proc-macro", version = "0.1.0" }
eyre = "0.6"
futures-lite = "2"
pretty_assertions_sorted = "1"
tempfile = "3.14.0"
wait-timeout = "0.2"

[workspace]
members = ["assay-proc-macro"]

[dev-dependencies]
actix-rt = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
trybuild = "1"

[features]
default = []
