[package]
name = "assay-proc-macro"
version = "0.1.1"
authors = ["Michael Gattozzi <self@mgattozzi.dev>"]
edition = "2021"
description = "A super powered testing macro for Rust"
documentation = "https://docs.rs/assay-proc-macro"
readme = "README.md"
repository = "https://github.com/mgattozzi/assay"
license = "MPL-2.0"
keywords = ["proc-macro", "test", "testing"]
categories = ["development-tools", "development-tools::testing"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["full"] }

[features]
default = ["async"]
async = []
